--- a/www/apps/api-reference/package.json
+++ b/www/apps/api-reference/package.json
@@ -17,7 +17,7 @@
     "@mdx-js/react": "^3.0.0",
     "@medusajs/icons": "^2.0.0",
     "@medusajs/ui": "^3.0.0",
-    "@next/mdx": "14.2.14",
+    "@next/mdx": "15.0.1",
     "@react-hook/resize-observer": "^2.0.2",
     "@readme/openapi-parser": "^2.5.0",
     "@types/mapbox__rehype-prism": "^0.8.0",
@@ -34,8 +34,8 @@
     "jsdom": "^22.1.0",
     "json-schema": "^0.4.0",
     "json-stringify-pretty-compact": "^4.0.0",
-    "next": "^14.2.14",
-    "next-mdx-remote": "^4.4.1",
+    "next": "15.0.1",
+    "next-mdx-remote": "5.0.0",
     "openapi-sampler": "^1.3.1",
     "openapi-types": "^12.1.3",
     "pluralize": "^8.0.0",
@@ -56,7 +56,7 @@
     "yaml": "^2.3.1"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^14.2.14",
+    "@next/bundle-analyzer": "15.0.1",
     "@types/jsdom": "^21.1.1",
     "@types/pluralize": "^0.0.33",
     "types": "*"
