--- a/www/apps/ui/package.json
+++ b/www/apps/ui/package.json
@@ -30,7 +30,7 @@
     "docs-ui": "*",
     "eslint-config-docs": "*",
     "mdast-util-toc": "^7.0.0",
-    "next": "^14.2.14",
+    "next": "15.0.1",
     "next-contentlayer": "^0.3.4",
     "next-themes": "^0.2.1",
     "postcss": "8.4.27",
