--- a/www/apps/user-guide/package.json
+++ b/www/apps/user-guide/package.json
@@ -17,10 +17,10 @@
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@medusajs/icons": "^2.0.0",
-    "@next/mdx": "^14.2.14",
+    "@next/mdx": "15.0.1",
     "clsx": "^2.1.0",
     "docs-ui": "*",
-    "next": "14.2.14",
+    "next": "15.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rehype-mdx-code-props": "^2.0.0",
@@ -38,7 +38,7 @@
     "build-scripts": "*",
     "eslint": "^8",
     "eslint-config-docs": "*",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "15.0.1",
     "postcss": "^8",
     "tailwind": "*",
     "tailwindcss": "^3.3.0",
