--- a/www/packages/docs-ui/package.json
+++ b/www/packages/docs-ui/package.json
@@ -41,7 +41,7 @@
     "cpy-cli": "^5.0.0",
     "eslint": "^8",
     "eslint-config-docs": "*",
-    "next": "^14.2.14",
+    "next": "15.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^5.0.1",
@@ -64,7 +64,7 @@
     "@medusajs/ui": "^4.0.0",
     "@octokit/request": "^8.1.1",
     "@react-hook/resize-observer": "^1.2.6",
-    "@segment/analytics-next": "^1.55.0",
+    "@segment/analytics-next": "^1.75.0",
     "@uidotdev/usehooks": "^2.4.1",
     "algoliasearch": "^5.2.1",
     "framer-motion": "^11.3.21",
