--- a/www/apps/book/package.json
+++ b/www/apps/book/package.json
@@ -14,24 +14,24 @@
     "prep": "node ./scripts/prepare.mjs"
   },
   "dependencies": {
-    "@mdx-js/loader": "^3.0.0",
-    "@mdx-js/react": "^3.0.0",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
     "@medusajs/icons": "^2.0.0",
     "@next/mdx": "15.0.1",
     "clsx": "^2.1.0",
     "docs-ui": "*",
     "next": "15.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "rc",
+    "react-dom": "rc",
     "rehype-mdx-code-props": "^2.0.0",
     "rehype-slug": "^6.0.0",
     "remark-rehype-plugins": "*"
   },
   "devDependencies": {
-    "@types/mdx": "^2.0.10",
+    "@types/mdx": "^2.0.13",
     "@types/node": "^20",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react@rc",
     "autoprefixer": "^10.0.1",
     "build-scripts": "*",
     "eslint": "^8",
@@ -46,5 +46,9 @@
   },
   "engines": {
     "node": ">=20"
+  },
+  "overrides": {
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react-dom@rc"
   }
 }
