--- a/www/apps/ui/package.json
+++ b/www/apps/ui/package.json
@@ -17,12 +17,6 @@
     "@medusajs/icons": "^2.0.0",
     "@medusajs/ui": "^4.0.0",
     "@medusajs/ui-preset": "^1.1.3",
-    "@radix-ui/react-dialog": "1.0.4",
-    "@radix-ui/react-scroll-area": "^1.0.4",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@types/node": "20.4.9",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
     "autoprefixer": "10.4.14",
     "clsx": "^2.0.0",
     "contentlayer": "^0.3.4",
@@ -34,9 +28,8 @@
     "next-contentlayer": "^0.3.4",
     "next-themes": "^0.2.1",
     "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-day-picker": "^8.10.0",
-    "react-dom": "18.2.0",
+    "react": "rc",
+    "react-dom": "rc",
     "rehype-slug": "^6.0.0",
     "remark": "^14.0.3",
     "tailwind": "*",
@@ -46,12 +39,19 @@
     "unist-util-visit": "4.1.2"
   },
   "devDependencies": {
+    "@types/node": "20.4.9",
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react@rc",
     "eslint": "^8.49.0",
-    "react-docgen": "^7.0.1",
+    "react-docgen": "^7.1.0",
     "ts-node": "^10.9.1",
     "types": "*"
   },
   "engines": {
     "node": ">=20"
+  },
+  "overrides": {
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react-dom@rc"
   }
 }
