--- a/www/apps/book/package.json
+++ b/www/apps/book/package.json
@@ -10,7 +10,7 @@
     "start": "next start",
     "start:monorepo": "yarn start -p 3001",
     "lint": "next lint --fix",
-    "lint:content": "eslint --no-eslintrc -c .content.eslintrc.js app/**/*.mdx --fix",
+    "lint:content": "eslint --no-config-lookup -c .content.eslint.mjs app/**/*.mdx --fix",
     "prep": "node ./scripts/prepare.mjs"
   },
   "dependencies": {
@@ -34,9 +34,7 @@
     "@types/react-dom": "npm:types-react@rc",
     "autoprefixer": "^10.0.1",
     "build-scripts": "*",
-    "eslint": "^8",
-    "eslint-config-docs": "*",
-    "eslint-config-next": "15.0.1",
+    "eslint": "^9.13.0",
     "postcss": "^8",
     "tailwind": "*",
     "tailwindcss": "^3.3.0",
