--- a/packages/admin/dashboard/package.json
+++ b/packages/admin/dashboard/package.json
@@ -7,6 +7,7 @@
     "build": "tsup && node ./scripts/generate-types.js",
     "build:preview": "vite build",
     "preview": "vite preview",
+    "test": "vitest --run",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "main": "dist/app.js",
@@ -80,6 +81,7 @@
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
     "@vitejs/plugin-react": "4.2.1",
+    "ajv": "^8.17.1",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
     "prettier": "^3.1.1",
@@ -87,7 +89,8 @@
     "tsup": "^8.0.2",
     "typescript": "5.2.2",
     "vite": "^5.2.11",
-    "vite-plugin-inspect": "^0.8.7"
+    "vite-plugin-inspect": "^0.8.7",
+    "vitest": "^2.1.3"
   },
   "packageManager": "yarn@3.2.1"
 }
