--- a/packages/admin/dashboard/package.json
+++ b/packages/admin/dashboard/package.json
@@ -7,7 +7,7 @@
     "build": "tsup && node ./scripts/generate-types.js",
     "build:preview": "vite build",
     "preview": "vite preview",
-    "test": "vitest --run",
+    "validate:translations": "node ./scripts/validate-translations.js",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "main": "dist/app.js",
@@ -89,8 +89,7 @@
     "tsup": "^8.0.2",
     "typescript": "5.2.2",
     "vite": "^5.2.11",
-    "vite-plugin-inspect": "^0.8.7",
-    "vitest": "^2.1.3"
+    "vite-plugin-inspect": "^0.8.7"
   },
   "packageManager": "yarn@3.2.1"
 }
