finish updating eslint

--- a/www/apps/book/package.json
+++ b/www/apps/book/package.json
@@ -35,6 +35,8 @@
     "autoprefixer": "^10.0.1",
     "build-scripts": "*",
     "eslint": "^9.13.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "postcss": "^8",
     "tailwind": "*",
     "tailwindcss": "^3.3.0",
