--- a/www/apps/user-guide/package.json
+++ b/www/apps/user-guide/package.json
@@ -36,6 +36,8 @@
     "@types/react-dom": "npm:types-react@rc",
     "autoprefixer": "^10.0.1",
     "build-scripts": "*",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "postcss": "^8",
     "tailwind": "*",
     "tailwindcss": "^3.3.0",
