--- a/www/apps/ui/package.json
+++ b/www/apps/ui/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.0.2",
+    "@mdx-js/react": "^3.1.0",
     "@medusajs/icons": "^2.0.0",
     "@medusajs/ui": "^4.0.0",
     "@medusajs/ui-preset": "^1.1.3",
@@ -41,6 +42,8 @@
     "@types/node": "20.4.9",
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react@rc",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "react-docgen": "^7.1.0",
     "ts-node": "^10.9.1",
     "types": "*"
