--- a/www/packages/docs-ui/package.json
+++ b/www/packages/docs-ui/package.json
@@ -38,6 +38,7 @@
     "@types/react-dom": "npm:types-react@rc",
     "clsx": "^2.0.0",
     "cpy-cli": "^5.0.0",
+    "eslint": "^9.13.0",
     "next": "15.0.1",
     "rimraf": "^5.0.1",
     "tailwind": "*",
