--- a/www/apps/api-reference/package.json
+++ b/www/apps/api-reference/package.json
@@ -10,7 +10,7 @@
     "build:prod": "NEXT_PUBLIC_ENV=production next build",
     "start": "next start",
     "start:monorepo": "yarn start -p 3000",
-    "lint": "next lint -c eslint.config.mjs --fix"
+    "lint": "next lint --fix"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.1.0",
@@ -57,6 +57,7 @@
     "@types/pluralize": "^0.0.33",
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react@rc",
+    "eslint": "^9.13.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react-hooks": "^5.0.0",
     "types": "*"
