--- a/www/apps/resources/package.json
+++ b/www/apps/resources/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "start:monorepo": "yarn start -p 3003",
     "lint": "next lint --fix",
-    "lint:content": "eslint --no-eslintrc -c .content.eslintrc.js app/**/*.mdx --fix",
+    "lint:content": "eslint --no-config-lookup -c .content.eslintrc.mjs app/**/*.mdx --fix",
     "prep": "node ./scripts/prepare.mjs"
   },
   "dependencies": {
@@ -33,6 +33,7 @@
     "@types/react-dom": "npm:types-react@rc",
     "autoprefixer": "^10.0.1",
     "build-scripts": "*",
+    "eslint": "^9.13.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react-hooks": "^5.0.0",
     "postcss": "^8",
