--- a/www/apps/ui/package.json
+++ b/www/apps/ui/package.json
@@ -10,7 +10,7 @@
     "start:monorepo": "yarn start -p 3002",
     "lint": "next lint --fix",
     "copy-colors": "ts-node ./scripts/copy-colors.ts",
-    "lint:content": "eslint --no-eslintrc -c .content.eslintrc.js src/content/docs --fix"
+    "lint:content": "eslint --no-config-lookup -c .content.eslintrc.mjs src/content/docs --fix"
   },
   "dependencies": {
     "@faker-js/faker": "^8.0.2",
@@ -42,6 +42,7 @@
     "@types/node": "20.4.9",
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react@rc",
+    "eslint": "^9.13.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react-hooks": "^5.0.0",
     "react-docgen": "^7.1.0",
