--- a/.github/workflows/admin-i18n-validation.yml
+++ b/.github/workflows/admin-i18n-validation.yml
@@ -46,4 +46,4 @@ jobs:
           
             # Run validation on the file
             yarn i18n:validate "$filename"
-          done < ../added_files.txt
+          done < ../../../added_files.txt
