--- a/.github/workflows/admin-i18n-validation.yml
+++ b/.github/workflows/admin-i18n-validation.yml
@@ -28,7 +28,7 @@ jobs:
         id: added_files
         run: |
           # List only newly added files in src/i18n/translations
-          git diff --name-only --diff-filter=A HEAD~1 HEAD -- src/i18n/translations/ > i18n_added_files.txt
+          git diff --name-only --diff-filter=A develop...HEAD -- packages/admin/dashboard/src/i18n/translations > i18n_added_files.txt
           # Exclude specific files and directories
           sed -i '/\$schema.json/d' i18n_added_files.txt  # Exclude $schema.json
           sed -i '/index.ts/d' i18n_added_files.txt       # Exclude index.ts
