--- a/.github/workflows/admin-i18n-validation.yml
+++ b/.github/workflows/admin-i18n-validation.yml
@@ -28,21 +28,21 @@ jobs:
         id: added_files
         run: |
           # List only newly added files in src/i18n/translations
-          git diff --name-only --diff-filter=A develop...HEAD -- packages/admin/dashboard/src/i18n/translations > i18n_added_files.txt
-          # Exclude specific files and directories
-          sed -i '/\$schema.json/d' i18n_added_files.txt  # Exclude $schema.json
-          sed -i '/index.ts/d' i18n_added_files.txt       # Exclude index.ts
-          sed -i '/__tests__\//d' i18n_added_files.txt    # Exclude any files in __tests__ directory
-          # Output the list of files
+          git diff --name-only --diff-filter=A develop HEAD -- packages/admin/dashboard/src/i18n/translations > i18n_added_files.txt
           cat i18n_added_files.txt
 
       - name: Validate i18n translations
         working-directory: packages/admin/dashboard
-        if: success() && steps.added_files.outputs
+        if: success() && steps.i18n_added_files.outputs
         run: |
           while read -r file; do
             # Get the base name of the file
             filename=$(basename "$file")
+          
+            # Skip those items
+            if [ "$filename" = "\$schema.json" ] || [ "$filename" = "index.ts" ] || [ -d "$file" ]; then
+              continue
+            fi
           
             # Run validation on the file
             yarn i18n:validate "$filename"
