--- a/.github/workflows/admin-i18n-validation.yml
+++ b/.github/workflows/admin-i18n-validation.yml
@@ -28,7 +28,7 @@ jobs:
         id: added_files
         run: |
           # List only newly added files in src/i18n/translations
-          git diff --name-only --diff-filter=A develop HEAD -- packages/admin/dashboard/src/i18n/translations > i18n_added_files.txt
+          git diff --name-only --diff-filter=A origin/develop HEAD -- packages/admin/dashboard/src/i18n/translations > i18n_added_files.txt
           cat i18n_added_files.txt
 
       - name: Validate i18n translations
